--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
-.maincontainer {
-    background-color: lavender
+@font-face {
+    font-family: "Chopsic";
+    src: local("Chopsic"),
+    url("fonts/Chopsic.otf") format(".otf");
 }
 
-.col, 
-.col-6 {
-    border: solid black 4px;
+h1 {
+    font-family: "chopsic", sans-serif;
+}
+
+.exo-text {
+  font-family: "Exo 2", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
